# GitSage

./: .gitignore  README.md  makefile  pyproject.toml  requirement.txt
.github/workflows/: publish.yml  release.yml
cli/: main.py
config/: loader.py  remote.py
engine/: analyzer.py  cache.py  core.py  explainer.py  formatter.py  generator.py  models.py  orchestrator.py
git/: diff.py
providers/: base.py  gemini.py  gitsage.py  local.py
tests/: test_cache.py  test_config.py  test_engine.py  test_ga4.py  test_gitsage_provider.py  test_orchestrator.py
utils/: __init__.py  helpers.py  logger.py  telemetry.py
