[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitsage-cli"
version = "1.0.0"
description = "GitSage AI: Premium AI-powered Git commit assistant with deep intelligence."
readme      = "README.md"
license     = { file = "LICENSE" }
authors     = [
    { name = "Favour Bamgboye", email = "demiladebamgboye@gmail.com" }
]
maintainers = [
    { name = "Favour Bamgboye", email = "demiladebamgboye@gmail.com" }
]

# Core runtime dependencies — kept minimal so install is fast for end-users.
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.10"

keywords = [
    "git", "ai", "devtools", "developer-tools", "git-tools",
    "open-source", "cli-tool", "automation", "productivity",
    "commit-messages", "python", "generative-ai", "conventional-commits",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Installation/Setup",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Typing :: Typed",
]

[project.optional-dependencies]

# Local Ollama provider
local = [
    "requests>=2.31.0",
]
# Development tooling
dev = [
    "pytest>=8",
    "pytest-asyncio",
    "pytest-cov",
    "respx",           # httpx mock/intercept for tests
    "ruff",
    "black",
    "mypy",
    "types-requests",
    "build",
    "twine",
]

[project.scripts]
gitsage = "cli.main:app"

[project.urls]
"Homepage"      = "https://gitsage-ai.vercel.app"
"Repository"    = "https://github.com/iamAgbaCoder/gitsage"
"Documentation" = "https://gitsage-ai.vercel.app/docs"
"Bug Tracker"   = "https://github.com/iamAgbaCoder/gitsage/issues"
"Changelog"     = "https://github.com/iamAgbaCoder/gitsage/releases"

# ──────────────────────────────────────────────────────────────
# Tool configs
# ──────────────────────────────────────────────────────────────

[tool.setuptools]
packages = ["cli", "engine", "providers", "git", "config", "utils"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
exclude = ["build/", ".dev/"]
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
